cmake_minimum_required(VERSION 3.20)
project(in-c C)
add_executable(R3_radix_sort R3_radix_sort.c)
add_executable(R3_binary_search_tree R3_binary_search_tree.c)
add_executable(R2_BM R2_BM.c)
add_executable(R2_chaining_hash R2_chaining_hash.c)
add_executable(H31_traverse H31_traverse.c)
add_executable(H30_binary_tree H30_binary_tree.c)
add_executable(H29_brute_force H29_brute_force.c)
add_executable(H29_boyer_moore H29_boyer_moore.c)
add_executable(H28_merge_sort H28_merge_sort.c)
add_executable(H28_linked_list H28_linked_list.c)
add_executable(H27_quick_sort H27_quick_sort.c)
add_executable(H26_binary_tree H26_binary_tree.c)
add_executable(H26_convert H26_convert.c)
add_executable(H25_bin_sort H25_bin_sort.c)
add_executable(H25_counting_sort H25_counting_sort.c)
add_executable(H25_doubly_linked_list H25_doubly_linked_list.c)
add_executable(H24_quick_sort H24_quick_sort.c)
add_executable(H23_RPN H23_RPN.c)
add_executable(H23_linked_list H23_linked_list.c)
add_executable(H22_radix_sort H22_radix_sort.c)
add_executable(H21_pointer H21_pointer.c)
add_executable(H21_komachi H21_komachi.c)
add_executable(H20_quick_sort H20_quick_sort.c)
add_executable(H19_binary_search H19_binary_search.c)
add_executable(H19_binary_search_not_recursive H19_binary_search_not_recursive.c)
add_executable(H19_linked_list H19_linked_list.c)
add_executable(H18_stack H18_stack.c)
add_executable(H17_count H17_count.c)
add_executable(H16_merge_sort H16_merge_sort.c)
